--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,8 +14,6 @@
     margin-top: 2%;
     color: #944c50;
     font-family: 'Montserrat', sans-serif;
-
-    
 }
 
 .logo{
@@ -37,6 +35,7 @@ nav{
 .heroimg{
     height: 450px;
     padding: 25px;
+    padding-bottom: 0%;
     background-color:#fff5ed;
 }
 
@@ -62,6 +61,102 @@ nav{
     margin-left: -230px;
     position:relative; top: -100px;
     padding:0%;
+}
+
+/*middle section*/
+
+hr{
+    border-top: 1px solid #944c50;
+    background-color: #f0e2d7;
+    margin: 0%;
+}
+
+main{ 
+    padding: 25px;
+    padding-top: 0%;
+    background-color: #fff5ed;
+}
+main h1{
+    font-family:'Caveat Brush', cursive;
+    font-size: 36px;
+    color: #944c50;
+}
+
+.my-work h1{
+    text-align: center;
+    margin-left: 16%;
+    padding-top: -10%;
+}
+
+.bold{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.skills-and-tools{
+    display: inline-block;
+    width: 25%;
+    vertical-align: top;
+    font-size: 20px;
+    font-family:'Montserrat', sans-serif;
+    line-height: 2em;
+    color:#944c50;
+    position: relative; top: -10px;
+}
+
+.tools{
+    margin-top: 30%;
+}
+
+.vl{
+    display: inline-block;
+    height: 1510px;
+    border-right: 1px solid #944c50;
+    position: relative; left: 50px;
+}
+
+.my-work{
+    display: inline-block;
+    width: 72%;
+    position: relative; top: -33px;
+}
+
+h2{
+    text-align: center;
+    font-size: 45px;
+    color: #f0e2d7;
+}
+
+.my-work p{
+    font-size: 23px;
+    padding-left: 10%;
+    padding-right:10%;
+    color: #f0e2d7;
+}
+
+.learn-more{
+    margin-left: 42%;
+    margin-top: 3%;
+}
+
+.nonprofit{
+    display: flex;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #c09491;
+    margin: 5%;
+    padding: 20px;
+    position: relative; left: 6%; top: -6px;
+    border-radius: 3%;
+}
+
+.government{
+    display: flex;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #c09491;
+    margin: 5%;
+    padding: 20px;
+    position: relative; left: 7%;
+    border-radius: 3%;
 }
 
 /*footer section*/
@@ -108,3 +203,5 @@ button{
     font-family: 'Montserrat', sans-serif;
     color: white;
 }
+
+
